--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+ANDROID_BUILD_MIN_SDK_VERSION=14
+ANDROID_BUILD_TARGET_SDK_VERSION=28
+ANDROID_BUILD_SDK_VERSION=28
+
+VERSION_NAME=1.3.6
+VERSION_CODE=136
